Revert "[setup] Page layout: fix vertical overflow style"
This reverts commit b4f56feadb6926bd33d8f51ee0428f5a26c48c03.

--- a/src/components/layouts/Page/styles.module.scss
+++ b/src/components/layouts/Page/styles.module.scss
@@ -23,8 +23,4 @@
 
 .page_content {
   overflow-x: auto;
-
-  // must be set explicitly
-  // because by default it's automatically set to same as overflow-x
-  overflow-y: initial;
 }
